--- a/styles.css
+++ b/styles.css
@@ -216,4 +216,47 @@ margin-top: 15px; */
   background-position: center;
   background-repeat: no-repeat;
 }
+.main-currency-table .currency-table--title2 {
+  margin-bottom: 15px;
+  font-size: 1.8rem;
+  font-weight: bold;
+  line-height: 2.3rem;
+  color: var(--secondary-blue);
+}
+.currency-table--date {
+  width: 190px;
+  height: 30px;
+  margin: 0 auto;
+  margin-top: 15px;
+  padding: 8px;
+  background-color: var(--soft-orange);
+  border-radius: 8px;
+}
+.currency-table--date p {
+  font-size: 1.2rem;
+  line-height: 1.5rem;
+  color: var(--warn-black);
+}
+.main-tables-container {
+  display: flex;
+  padding: 0 35px;
+  width: 320px;
+  overflow-x: scroll;
+  scroll-behavior: smooth;
+}
+.currency-table--date2 {
+  width: 190px;
+  height: 30px;
+  margin: 0 auto;
+  margin-top: 15px;
+  padding: 8px;
+  background-color: var(--soft-blue);
+  border-radius: 8px;
+}
+.currency-table--date2 p {
+  font-size: 1.2rem;
+  font-weight: 300;
+  line-height: 1.5rem;
+  color: var(--warn-black);
+}
 
