--- a/styles.css
+++ b/styles.css
@@ -302,19 +302,18 @@ margin-top: 15px; */
   width: 90%;
   min-width: 288px;
   max-width: 400px;
-  height: 150px;
+  min-height: 150px;
   margin: 15px auto;
   padding: 15px;
   background-color: var(--black);
   border-radius: 5px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.16);
 }
-.product-detail--card .clock {
+.product-detail--card .card-icon {
   display: inline-block;
   width: 20px;
   height: 20px;
   margin-bottom: 10px;
-  background-image: url('./assets/icons/clock.svg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -324,6 +323,7 @@ margin-top: 15px; */
   font-weight: bold;
   line-height: 1.8rem;
   color: var(--just-white);
+  font-size: 1.8rem;
 }
 .product-card--body {
   font-size: 1.4rem;
@@ -331,3 +331,22 @@ margin-top: 15px; */
   line-height: 1.8rem;
   color: #808080;
 }
+
+.bitcoin-img-container {
+  width: 100%;
+  min-width: 320px;
+  height: 50vh;
+  background-image: url('https://i.ibb.co/4mbhD0k/bitcoinbaby-1.jpg');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  text-align: center;
+}
+.bitcoin-img-container h2 {
+  padding-top: 60px;
+  font-size: 2.4rem;
+  font-weight: bold;
+  line-height: 2.6rem;
+  color: var(--just-white);
+}
+
