--- a/styles.css
+++ b/styles.css
@@ -240,9 +240,16 @@ margin-top: 15px; */
 .main-tables-container {
   display: flex;
   padding: 0 35px;
-  width: 320px;
+  min-width: 320px;
   overflow-x: scroll;
   scroll-behavior: smooth;
+}
+.main-tables-container::-webkit-scrollbar {
+  background-color: var(--soft-orange);
+  height: 3px;
+}
+.main-tables-container::-webkit-scrollbar-thumb {
+  background-color: var(--bitcoin-orange);
 }
 .currency-table--date2 {
   width: 190px;
@@ -403,6 +410,30 @@ margin-top: 15px; */
   border-radius: 8px;
   color: var(--just-white);
 }
+.mensual {
+  position: absolute;
+  width: 120px;
+  height: 31px;
+  padding: 6px;
+  top: -15px;
+  left: calc(50% - 60px);
+  font-size: 1.2rem;
+  background-color: var(--secondary-blue);
+  border-radius: 8px;
+  color: var(--just-white);
+}
+.ilimitado {
+  position: absolute;
+  width: 120px;
+  height: 31px;
+  padding: 6px;
+  top: -15px;
+  left: calc(50% - 60px);
+  font-size: 1.2rem;
+  background-color: var(--black);
+  border-radius: 8px;
+  color: var(--just-white);
+}
 .plan-card--title {
   padding-top: 30px;
   font-size: 1.4rem;
@@ -426,3 +457,47 @@ margin-top: 15px; */
   font-size: 1.2rem;
   color: #757575;
 }
+.plans-container--slider {
+  display: flex;
+  padding: 0 35px;
+  min-width: 320px;
+  overflow-x: scroll;
+  scroll-behavior: smooth;
+}
+.plans-container--slider::-webkit-scrollbar {
+  background-color: var(--soft-orange);
+  height: 3px;
+}
+.plans-container--slider::-webkit-scrollbar-thumb {
+  background-color: var(--bitcoin-orange);
+}
+.plan-card--ca {
+  width: 150px;
+  height: 48px;
+  margin-top: 20px;
+  background-color: var(--off-white);
+  border: 2px solid var(--bitcoin-orange);
+  border-radius: 4px;
+  font-family: 'DM Sans', sans-serif;
+  font-size: 1.4rem;
+  font-weight: bold;
+  line-height: 1.8rem;
+  color: var(--black);
+  cursor: pointer;
+  outline: none;
+}
+.plan-card--ca span {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background-image: url('./assets/icons/arrow-right.svg');
+  vertical-align: text-bottom;
+}
+
+/* https://amaurysg.github.io/mobile-first-batatabit/#planes : REVISAR EL DISEÑO PARA AGREGAR ANIMACIONES */
+
+
+
+
+
+
