--- a/styles.css
+++ b/styles.css
@@ -389,10 +389,11 @@ margin-top: 15px; */
 .plans-container--card {
   position: relative;
   width: 70%;
-  min-width: 230px;
+  min-width: 190px;
   max-width: 300px;
   height: 250px;
-  margin: 50px auto 0;
+  margin: 50px 8px 0;
+  /* margin: 50px auto 0; */
   padding: 0 15px;
   background-color: var(--just-white);
   border-radius: 15px;
@@ -496,8 +497,30 @@ margin-top: 15px; */
 
 /* https://amaurysg.github.io/mobile-first-batatabit/#planes : REVISAR EL DISEÑO PARA AGREGAR ANIMACIONES */
 
-
-
-
+footer {
+  display: flex;
+  width: 100%;
+  height: 150px;
+  background-color: var(--bitcoin-orange);
+}
+footer section {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+footer .left ul {
+  font-size: 1.4rem;
+  font-weight: 500;
+  line-height: 1.8rem;
+  list-style: none;
+}
+.left li {
+  margin: 10px 0;
+}
+.left a {
+  text-decoration: none;
+  color: var(--just-white);
+}
 
 
